Tools/TestWebKitAPI/TestWebKitAPI.gyp/TestWebKitAPI.gyp
@@ -77,6 +77,11 @@
                 '<@(TestWebKitAPI_files)',
             ],
             'conditions': [
+                ['component!="shared_library"', {
+                    'sources': [
+		        '../Tests/WebCore/HeapGraphSerializerTest.cpp'
+                    ],
+                }],
                 ['inside_chromium_build==1 and component=="shared_library"', {
                     'sources': [
                         # To satisfy linking of WTF::currentTime() etc. in shared library configuration,
